Use .valueOf for wrappers in clover-core.
Replace deprecated 'new' with valueOf for use of wrappers in
clover-core.